# chaser

./: .gitignore  404.html  CHANGELOG.md  README.md  github projects.lnk  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
changelog/: index.html
chaser/: __init__.py
chaser/api/: __init__.py  app.py  manager.py
chaser/browser/: client.py  pool.py  stealth.py
chaser/cli/: __init__.py  main.py
chaser/config/: __init__.py  settings.py
chaser/engine/: runner.py  stats.py  trap.py
chaser/extract/: __init__.py  selector.py
chaser/frontier/: __init__.py  queue.py  redis_frontier.py  sqlite.py
chaser/hooks/: __init__.py  autothrottle.py  bandwidth.py  base.py  cookies.py  har.py  proxy.py  ratelimit.py  retry.py  robots.py
chaser/item/: base.py  loader.py
chaser/metrics/: __init__.py  collector.py
chaser/net/: cache.py  client.py  headers.py  request.py  response.py
chaser/pipeline/: __init__.py  base.py  filters.py
chaser/testing/: __init__.py  helpers.py
chaser/trapper/: base.py  crawl.py  sitemap.py
cli/: index.html
cloud/api/: index.html
cloud/metrics/: index.html
cloud/redis/: index.html
cloud/stores/: index.html
docs/: cli.md  getting-started.md  index.md  net.md
docs/cloud/: api.md  metrics.md  redis.md  stores.md
docs/guide/: browser.md  cache.md  configuration.md  hooks.md  items.md  pipeline.md  resume.md  testing.md  trappers.md
getting-started/: index.html
guide/browser/: index.html
guide/cache/: index.html
guide/configuration/: index.html
guide/hooks/: index.html
guide/items/: index.html
guide/pipeline/: index.html
guide/resume/: index.html
guide/testing/: index.html
guide/trappers/: index.html
net/: index.html
search/: search_index.json
tests/test_api/: test_app.py
tests/test_browser/: test_client.py  test_pool.py  test_stealth.py
tests/test_cli/: test_main.py
tests/test_config/: test_settings.py
tests/test_e2e/: test_crawl.py
tests/test_engine/: test_runner.py  test_stats.py  test_trap.py
tests/test_extract/: test_selector.py
tests/test_frontier/: test_queue.py  test_redis.py  test_sqlite.py
tests/test_hooks/: test_autothrottle.py  test_bandwidth.py  test_cookies.py  test_har.py  test_integration.py  test_proxy.py  test_ratelimit.py  test_retry.py  test_robots.py
tests/test_item/: test_loader.py
tests/test_metrics/: test_collector.py  test_engine_metrics.py
(+22 files in other folders)
