[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaser"
dynamic = ["version"]
description = "A fast, reliable web crawling framework built on modern Python asyncio"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Emanuel", email = "emanuelsdsj@gmail.com" }]
keywords = ["web crawling", "scraping", "asyncio", "http", "spider"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx[http2]>=0.27",
    "httpx-socks>=0.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "parsel>=1.9",
    "mmh3>=4.1",
    "bitarray>=2.9",
    "typer>=0.12",
    "anyio>=4.4",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
db = ["sqlalchemy>=2.0", "aiosqlite>=0.20"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "pytest-httpserver>=1.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ruff>=0.4",
]

[project.scripts]
chaser = "chaser.cli.main:app"

[project.urls]
Homepage = "https://github.com/emanuelsds/chaser"
Issues = "https://github.com/emanuelsds/chaser/issues"
Changelog = "https://github.com/emanuelsds/chaser/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "chaser/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["chaser"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["chaser"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["chaser"]
omit = ["tests/*", "chaser/cli/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
